# 2016-Software-programming-UNIFI

./: CMakeLists.txt  Matrix.h  MatrixException.h  README.md  index_exception.h  main.cpp  math_exception.h
test/: CMakeLists.txt  MatrixTests.cpp  OperatorTests.cpp
test/lib/: OperatorTests.cpp
